--- a/src/view/tasksView.fxml
+++ b/src/view/tasksView.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="342.0" prefWidth="557.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.tasksViewController">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TasksViewController">
    <center>
       <ScrollPane BorderPane.alignment="CENTER">
          <content>
@@ -23,7 +23,7 @@
    <top>
       <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <items>
-          <Button mnemonicParsing="false" text="Back" fx:id="backButton" onAction="#backButtonClicked"/>
+          <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonClicked" text="Back" />
         </items>
       </ToolBar>
    </top>
