List item now looks more suitable and has a better constructor. Now also projects view uses list item(s).

--- a/src/view/listItem.fxml
+++ b/src/view/listItem.fxml
@@ -7,6 +7,6 @@
 <?import javafx.scene.layout.*?>
 
 <fx:root type="javafx.scene.layout.HBox" xmlns:fx="http://javafx.com/fxml">
-    <TextField fx:id="textField"/>
-    <Button text="Click Me" onAction="#doSomething"/>
+    <Label fx:id="title"/>
+    <Button text="View" onAction="#buttonClicked"/>
 </fx:root>
