--- a/src/view/tasksView.fxml
+++ b/src/view/tasksView.fxml
@@ -17,18 +17,27 @@
                   <Label text="Label" />
                   <Label text="Label" />
                </children>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
             </VBox>
          </content>
       </ScrollPane>
    </center>
    <top>
-      <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-        <items>
-          <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonClicked" text="Back" />
-        </items>
-      </ToolBar>
+      <VBox BorderPane.alignment="CENTER">
+         <children>
+            <ToolBar prefHeight="40.0" prefWidth="200.0">
+              <items>
+                <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonClicked" text="Back" />
+                  <Label fx:id="titleLabel" />
+              </items>
+            </ToolBar>
+            <Label fx:id="descriptionLabel" text="Project description here">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin></Label>
+         </children>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
+      </VBox>
    </top>
 </BorderPane>
