--- a/src/view/projectsView.fxml
+++ b/src/view/projectsView.fxml
@@ -10,26 +10,29 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ProjectsViewController">
+<BorderPane fx:id="layout" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ProjectsViewController">
    <center>
       <VBox fx:id="projectsContainer" minWidth="-Infinity" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
       </VBox>
    </center>
    <top>
-      <ToolBar prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: linear-gradient(#444444, #555555);" BorderPane.alignment="CENTER" />
+      <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: linear-gradient(#444444, #555555);" BorderPane.alignment="CENTER">
+         <items>
+            <Button fx:id="signOutButton" alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#signOut" onMouseEntered="#onSignOutButtonHover" onMouseExited="#onSignOutButtonHoverOut" prefHeight="31.0" prefWidth="80.0" style="-fx-background-color: linear-gradient(#444444, #333333);" text="Sign out" textFill="#d7cccc" />
+         </items></ToolBar>
    </top>
    <bottom>
       <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-max-height: 50;" BorderPane.alignment="CENTER">
          <children>
-            <HBox prefHeight="6.0" prefWidth="600.0" style="-fx-max-height: 50; -fx-background-color: linear-gradient(#555555, #444444);">
+            <HBox prefHeight="6.0" prefWidth="600.0" style="-fx-max-height: 50; -fx-background-color: linear-gradient(#555555, #444444); -fx-border-color: #333;">
                <children>
                   <Region HBox.hgrow="ALWAYS" />
-                  <Button alignment="CENTER" mnemonicParsing="false" style="-fx-alignment: center; -fx-background-color: linear-gradient(#444444, #333333);" text="Add a new project" textFill="#c6b8b8" HBox.hgrow="ALWAYS">
+                  <Button fx:id="newProjectButton" alignment="CENTER" mnemonicParsing="false" onMouseEntered="#onAddButtonHover" onMouseExited="#onAddButtonHoverOut" style="-fx-alignment: center; -fx-background-color: linear-gradient(#444444, #333333);" text="Add a new project" textFill="#c6b8b8" HBox.hgrow="ALWAYS">
                      <HBox.margin>
                         <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                      </HBox.margin>
                      <padding>
-                        <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                        <Insets bottom="5.0" left="15.0" right="15.0" top="5.0" />
                      </padding>
                   </Button>
                   <Region HBox.hgrow="ALWAYS" />
