--- a/src/view/tasksView.fxml
+++ b/src/view/tasksView.fxml
@@ -8,16 +8,11 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TasksViewController">
+<BorderPane prefHeight="400.0" prefWidth="600.0" stylesheets="@darkstyle.css" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TasksViewController">
    <center>
       <ScrollPane BorderPane.alignment="CENTER">
          <content>
-            <VBox fx:id="taskContainer" prefHeight="300.0" prefWidth="500.0">
-               <children>
-                  <Label text="Label" />
-                  <Label text="Label" />
-               </children>
-            </VBox>
+            <VBox fx:id="taskContainer" prefHeight="300.0" prefWidth="500.0" />
          </content>
       </ScrollPane>
    </center>
