--- a/src/view/listItem.fxml
+++ b/src/view/listItem.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<fx:root type="javafx.scene.layout.HBox" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.112">
-    <Label fx:id="title" />
+<fx:root stylesheets="@darkstyle.css" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1">
+    <Label fx:id="listItemTitle" />
     <AnchorPane prefWidth="300" />
-    <Button layoutX="300" onAction="#deleteButtonClicked" text="Delete" />
-    <Button onAction="#viewButtonClicked" text="View" />
+    <Button fx:id="deleteButton" layoutX="300" onAction="#deleteButtonClicked" text="Delete" />
+    <Button fx:id="viewButton" onAction="#viewButtonClicked" text="View" />
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
    </padding>
