--- a/src/view/darkstyle.css
+++ b/src/view/darkstyle.css
@@ -15,7 +15,6 @@
   -fx-text-fill: #b5acac;
 }
 
-
 .button{
   -fx-background-color: linear-gradient(#444444, #333333);
   -fx-text-fill: #b5acac;
@@ -25,13 +24,21 @@
   -fx-background-color: linear-gradient(#555555, #444444);
 }
 
-/*
-#backButton{
-  -fx-background-color: rgb(255, 0, 0); toimii, jos on sama fx id!
-}
-*/
-
+/*NOTE: these need to have the same fx:id in order to work*/
 #deleteButton{
-  -fx-background-color: rgb(200, 55, 55);
+  -fx-background-color: rgb(200, 80, 80);
   -fx-text-fill: #000000;
+}
+
+#deleteButton:hover{
+  -fx-background-color: rgb(200, 55, 55);
+}
+
+#bottomButtonBar{
+  -fx-background-color: linear-gradient(#555555, #444444);
+  -fx-border-color: #333;
+}
+
+#bottomLabelBar{
+  -fx-background-color: #444444;
 }
