--- a/src/view/projectsView.fxml
+++ b/src/view/projectsView.fxml
@@ -1,33 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.paint.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.effect.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="layout" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ProjectsViewController">
+<BorderPane fx:id="layout" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@darkstyle.css" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ProjectsViewController">
    <center>
       <VBox fx:id="projectsContainer" minWidth="-Infinity" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
       </VBox>
    </center>
    <top>
-      <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: linear-gradient(#444444, #555555);" BorderPane.alignment="CENTER">
+      <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <items>
-            <Button fx:id="signOutButton" alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#signOut" onMouseEntered="#onSignOutButtonHover" onMouseExited="#onSignOutButtonHoverOut" prefHeight="31.0" prefWidth="80.0" style="-fx-background-color: linear-gradient(#444444, #333333);" text="Sign out" textFill="#d7cccc" />
+            <Button fx:id="signOutButton" alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#signOut" onMouseEntered="#onSignOutButtonHover" onMouseExited="#onSignOutButtonHoverOut" prefHeight="31.0" prefWidth="80.0" text="Sign out" />
          </items></ToolBar>
    </top>
    <bottom>
       <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-max-height: 50;" BorderPane.alignment="CENTER">
          <children>
-            <HBox prefHeight="6.0" prefWidth="600.0" style="-fx-max-height: 50; -fx-background-color: linear-gradient(#555555, #444444); -fx-border-color: #333;">
+            <HBox fx:id="bottomButtonBar" prefHeight="6.0" prefWidth="600.0" style="-fx-max-height: 50;">
                <children>
                   <Region HBox.hgrow="ALWAYS" />
-                  <Button fx:id="newProjectButton" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#addProject" onMouseEntered="#onAddButtonHover" onMouseExited="#onAddButtonHoverOut" style="-fx-alignment: center; -fx-background-color: linear-gradient(#444444, #333333);" text="Add a new project" textFill="#c6b8b8" HBox.hgrow="ALWAYS">
+                  <Button fx:id="newProjectButton" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#addProject" style="-fx-alignment: center; " text="Add a new project" HBox.hgrow="ALWAYS">
                      <HBox.margin>
                         <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                      </HBox.margin>
@@ -41,9 +40,9 @@
                   <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                </padding>
             </HBox>
-            <HBox maxHeight="71.0" prefHeight="71.0" prefWidth="600.0" style="-fx-max-height: 25; -fx-background-color: #444444;">
+            <HBox fx:id="bottomLabelBar" maxHeight="71.0" prefHeight="71.0" prefWidth="600.0" style="-fx-max-height: 25;">
                <children>
-                  <Label text="Project manager " textFill="#b5acac">
+                  <Label text="Project manager ">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
