--- a/src/view/listItem.fxml
+++ b/src/view/listItem.fxml
@@ -3,14 +3,15 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 
-<fx:root stylesheets="@darkstyle.css" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1">
-    <Label fx:id="listItemTitle" />
-    <AnchorPane prefWidth="300" />
+<fx:root fx:id="listItem" stylesheets="@darkstyle.css" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1">
+    <Label fx:id="listItemTitle" text="sample text" />
+   <Region HBox.hgrow="ALWAYS" />
     <Button fx:id="deleteButton" layoutX="300" onAction="#deleteButtonClicked" text="Delete" />
     <Button fx:id="viewButton" onAction="#viewButtonClicked" text="View" />
+   <Region prefWidth="100.0" HBox.hgrow="NEVER" />
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
    </padding>
