--- a/src/view/listItem.fxml
+++ b/src/view/listItem.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 
-<fx:root fx:id="listItem" stylesheets="@darkstyle.css" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root fx:id="listItem" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1">
     <Label fx:id="listItemTitle" text="sample text" />
    <Region HBox.hgrow="ALWAYS" />
     <Button fx:id="deleteButton" layoutX="300" onAction="#deleteButtonClicked" text="Delete" />
