--- a/src/view/tasksView.fxml
+++ b/src/view/tasksView.fxml
@@ -10,7 +10,7 @@
 
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
-<BorderPane prefHeight="400.0" prefWidth="600.0" stylesheets="@darkstyle.css" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TasksViewController">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TasksViewController">
    <center>
       <ScrollPane BorderPane.alignment="CENTER">
          <content>
