--- a/src/view/darkstyle.css
+++ b/src/view/darkstyle.css
@@ -1,3 +1,9 @@
+/*
+  TODO: -poista turhat metodit jotka muuttaa nappuloiden väriä
+  TODO: -uuden projektin luomisnäkymä
+  TODO: -kirjautumisnäkymät (?)
+*/
+
 .root{
     /*-fx-font-size: 9pt;*/
     /*-fx-font-family: "Courier New";*/
@@ -5,6 +11,10 @@
     -fx-background: #777777; /*iso tausta*/
     /*-fx-background-color: #555555  ylemmän vboxin tausta tasks view:ssä*/
     /*-fx-text-fill: #b5acac;*/
+}
+
+.containerWithGradient{
+  -fx-background-color: linear-gradient(#555555, #444444);
 }
 
 .tool-bar{
