--- a/src/view/LoginView.fxml
+++ b/src/view/LoginView.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox fx:id="layout" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" style="-fx-alignment: top_center; -fx-background-color: linear-gradient(#555555, #444444);" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.LoginViewController">
+<VBox fx:id="layout" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" style="-fx-alignment: top_center;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.LoginViewController">
    <children>
-      <Label alignment="TOP_CENTER" style="-fx-opacity: 1; -fx-text-fill: #BBBBBB;" text="Project Manager" textFill="#ffffff21">
+      <Label alignment="TOP_CENTER" text="Project Manager">
          <font>
             <Font size="33.0" />
          </font>
@@ -44,7 +44,7 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </PasswordField>
-      <Button fx:id="loginButton" contentDisplay="CENTER" graphicTextGap="6.0" mnemonicParsing="false" onMouseClicked="#signIn" onMouseEntered="#onHover" onMouseExited="#onHoverOut" style="-fx-max-width: 100; -fx-background-color: linear-gradient(#444444, #333333);" text="Log in" textFill="#f0eded72">
+      <Button fx:id="loginButton" contentDisplay="CENTER" graphicTextGap="6.0" mnemonicParsing="false" onMouseClicked="#signIn" style="-fx-max-width: 100;" text="Log in">
          <VBox.margin>
             <Insets top="20.0" />
          </VBox.margin>
@@ -54,12 +54,12 @@
             <Insets top="120.0" />
          </VBox.margin>
          <children>
-            <Label text="Not yet registered?" textFill="#ebe8e8b8">
+            <Label text="Not yet registered?">
                <HBox.margin>
                   <Insets left="15.0" top="50.0" />
                </HBox.margin>
             </Label>
-            <Label fx:id="signUpLabel" onMouseClicked="#changeRegistrationView" style="-fx-font-style: italic;" text="Sign up" textFill="#bc0001">
+            <Label fx:id="signUpLabel" onMouseClicked="#changeRegistrationView" text="Sign up">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
