--- a/src/view/mainView.fxml
+++ b/src/view/mainView.fxml
@@ -65,8 +65,8 @@
          <children>
             <Region prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
             <ImageView fitHeight="59.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-            <Label text="[username]" />
-            <Button mnemonicParsing="false" text="Logout" />
+            <Label fx:id="usernameLabel" text="[username]" />
+            <Button fx:id="logoutButton" mnemonicParsing="false" onMouseClicked="#logout" text="Logout" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
