--- a/src/view/mainView.fxml
+++ b/src/view/mainView.fxml
@@ -13,12 +13,12 @@
    <center>
       <VBox>
          <children>
-            <HBox prefHeight="98.0" prefWidth="1180.0">
+            <HBox prefHeight="38.0" prefWidth="1180.0">
                <children>
-                  <Region prefHeight="64.0" prefWidth="200.0" />
+                  <Region prefHeight="38.0" prefWidth="166.0" />
                   <VBox prefHeight="56.0" prefWidth="256.0">
                      <children>
-                        <Label prefHeight="30.0" prefWidth="131.0" text="Project name">
+                        <Label prefHeight="30.0" prefWidth="183.0" text="No project selected">
                            <font>
                               <Font size="20.0" />
                            </font>
@@ -32,7 +32,7 @@
               <tabs>
                 <Tab text="Tasks">
                   <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="338.0" prefWidth="1116.0" />
                   </content>
                 </Tab>
                 <Tab text="Members">
@@ -51,7 +51,10 @@
       </VBox>
    </center>
    <left>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+      <VBox fx:id="projectMenu" prefHeight="559.0" prefWidth="166.0" BorderPane.alignment="CENTER">
+         <children>
+            <Region prefHeight="84.0" prefWidth="166.0" />
+         </children></VBox>
    </left>
    <bottom>
       <AnchorPane prefHeight="23.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
@@ -61,12 +64,18 @@
       </AnchorPane>
    </bottom>
    <top>
-      <HBox prefHeight="46.0" prefWidth="1280.0" spacing="10.0">
+      <HBox prefHeight="46.0" prefWidth="1280.0" spacing="10.0" styleClass="containerWithGradient">
          <children>
-            <Region prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
-            <ImageView fitHeight="59.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-            <Label fx:id="usernameLabel" text="[username]" />
-            <Button fx:id="logoutButton" mnemonicParsing="false" onMouseClicked="#logout" text="Logout" />
+            <Region prefHeight="43.0" prefWidth="1012.0" HBox.hgrow="ALWAYS" />
+            <ImageView fitHeight="59.0" fitWidth="76.0" pickOnBounds="true" preserveRatio="true" />
+            <Label fx:id="usernameLabel" prefHeight="21.0" prefWidth="129.0" text="[username]">
+               <HBox.margin>
+                  <Insets top="20.0" />
+               </HBox.margin></Label>
+            <Button fx:id="logoutButton" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="31.0" prefWidth="132.0" text="Logout">
+               <HBox.margin>
+                  <Insets right="20.0" top="15.0" />
+               </HBox.margin></Button>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
