--- a/src/view/listItem.fxml
+++ b/src/view/listItem.fxml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 
-<fx:root fx:id="listItem" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root fx:id="listItem" prefHeight="31.0" prefWidth="139.0" style="-fx-background-color: linear-gradient(#888888, #999999);" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <Label fx:id="listItemTitle" text="sample text" />
    <Region HBox.hgrow="ALWAYS" />
-    <Button fx:id="deleteButton" layoutX="300" onAction="#deleteButtonClicked" text="Delete" />
-    <Button fx:id="viewButton" onAction="#viewButtonClicked" text="View" />
+
    <Region prefWidth="30.0" HBox.hgrow="NEVER" />
    <padding>
-      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+      <Insets bottom="5.0" left="10.0" right="5.0" top="5.0" />
    </padding>
 </fx:root>
