--- a/src/view/listItem.fxml
+++ b/src/view/listItem.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 
-<fx:root fx:id="listItem" prefHeight="31.0" prefWidth="139.0" style="-fx-background-color: linear-gradient(#888888, #999999);" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root fx:id="listItem" onMouseClicked="#onClick" prefHeight="31.0" prefWidth="139.0" style="-fx-background-color: linear-gradient(#888888, #999999);" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <Label fx:id="listItemTitle" text="sample text" />
    <Region HBox.hgrow="ALWAYS" />
 
