--- a/src/view/mainView.fxml
+++ b/src/view/mainView.fxml
@@ -9,16 +9,16 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainViewController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="766.0" prefWidth="1328.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainViewController">
    <center>
-      <VBox>
+      <VBox prefHeight="638.0" prefWidth="936.0">
          <children>
-            <HBox prefHeight="38.0" prefWidth="1180.0">
+            <HBox prefHeight="13.0" prefWidth="1114.0">
                <children>
                   <Region prefHeight="38.0" prefWidth="166.0" />
                   <VBox prefHeight="56.0" prefWidth="256.0">
                      <children>
-                        <Label prefHeight="30.0" prefWidth="183.0" text="No project selected">
+                        <Label fx:id="projectTitle" prefHeight="30.0" prefWidth="183.0" text="No project selected">
                            <font>
                               <Font size="20.0" />
                            </font>
@@ -28,12 +28,12 @@
                   </VBox>
                </children>
             </HBox>
-            <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+            <TabPane prefHeight="200.0" prefWidth="1015.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
               <tabs>
                 <Tab text="Tasks">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="338.0" prefWidth="1116.0" />
-                  </content>
+                     <content>
+                        <VBox prefHeight="560.0" prefWidth="245.0" />
+                     </content>
                 </Tab>
                 <Tab text="Members">
                   <content>
@@ -47,13 +47,16 @@
                   </Tab>
               </tabs>
             </TabPane>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="338.0" prefWidth="1116.0" />
          </children>
       </VBox>
    </center>
    <left>
-      <VBox fx:id="projectMenu" prefHeight="559.0" prefWidth="166.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="638.0" prefWidth="190.0" BorderPane.alignment="CENTER">
          <children>
             <Region prefHeight="84.0" prefWidth="166.0" />
+            <Button fx:id="newProjectButton" mnemonicParsing="false" onMouseClicked="#openNewProjectWindow" prefHeight="31.0" prefWidth="128.0" text="New project" />
+            <VBox fx:id="projectMenu" prefHeight="603.0" prefWidth="242.0" />
          </children></VBox>
    </left>
    <bottom>
@@ -67,7 +70,7 @@
       <HBox prefHeight="46.0" prefWidth="1280.0" spacing="10.0" styleClass="containerWithGradient">
          <children>
             <Region prefHeight="43.0" prefWidth="1012.0" HBox.hgrow="ALWAYS" />
-            <ImageView fitHeight="59.0" fitWidth="76.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fitHeight="59.0" fitWidth="86.0" pickOnBounds="true" preserveRatio="true" />
             <Label fx:id="usernameLabel" prefHeight="21.0" prefWidth="129.0" text="[username]">
                <HBox.margin>
                   <Insets top="20.0" />
@@ -77,9 +80,6 @@
                   <Insets right="20.0" top="15.0" />
                </HBox.margin></Button>
          </children>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
       </HBox>
    </top>
 </BorderPane>
